# exploring_python

./: .gitignore  404.html  CLAUDE.md  GEMINI.md  README.md  VISION_AND_PLAN.md  _config.yml  _toc.yml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  index.ipynb  index.md  mkdocs.yaml  pyproject.toml  robots.txt  sitemap.xml
basics/: classes.py  dictionaries.py  pyproject.toml
click_examples/basic/: README.md  pyproject.toml
control_statements/: for_loops.ipynb  for_loops.md  if_statements.ipynb  if_statements.md  index.ipynb  index.md  looping_over_a_function.ipynb  looping_over_a_function.md  while_loops.ipynb  while_loops.md
core_modules/: datetime.ipynb  index.ipynb  logging.ipynb  os.ipynb  statistics.ipynb  subprocess.ipynb
docs/: CNAME  index.md
email_daily_news/: main.py  pyproject.toml
exploring_python/: index.md
fighting_game/: enemy.py  main.py
file_interactions/: csv.ipynb  csv.md  csv.rst  databases.ipynb  databases.md  index.ipynb  index.md  index.rst  json.ipynb  json.md  motorcycles.txt  my_sample_text_file.txt  xml.ipynb  xml.md
functions_and_classes/: classes.ipynb  classes.md  functions.ipynb  functions.md  index.ipynb  index.md
modules_packages/: index.ipynb  index.md  index.rst
python_packages/: index.ipynb  pandas.ipynb
resources/: .useful_videos.ipynb.swp  generalCodingResources.ipynb  generalCodingResources.md  general_coding_resources.ipynb  glossary.ipynb  glossary.rst  index.ipynb  index.md  usefulVideos.md  useful_videos.ipynb
search/: search_index.json
(+147 files in other folders)
