[project]
name = "basic"
version = "0.1.0"
description = "A very basic example of Click"
authors = [
    {name = "Brad Penney",email = "penney.brad@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
